# flash-moe-universal

./: CMakeLists.txt  README.md  build.bat  build.sh  launch_gui.bat  launch_gui.sh  setup.sh
.github/: ci.yml
.github/workflows/: ci.yml
docs/: BUILD.md  CONTRIBUTING.md  SECURITY.md  io-and-gpu-exploration.md  optimization-experiments-q4.md  plan-async-pread-pipeline.md  plan-io-experiments.md
gui/: app.py
scripts/: download_model.py  extract_weights.py  repack_experts.py  test_model.py
src/backends/: cpu_backend.h  kernels.cl
src/cli/: main.c
src/core/: inference_engine.c  inference_engine.h  model_config.h
src/platform/: platform.h
